--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,16 +4,16 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "enc-cli"
-version = "0.1.3"
+version = "0.1.4"
 description = "Secure, Memory-Only Encryption for Code Execution"
 authors = [
   { name="Pranjal Bhaskare", email="pranjalab@gmail.com" },
 ]
 readme = "README.md"
 requires-python = ">=3.9"
+license = { text = "MIT" }
 classifiers = [
     "Programming Language :: Python :: 3",
-    "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
 ]
 dependencies = [
